--- a/FAQ.html
+++ b/FAQ.html
@@ -13,7 +13,7 @@
   <header class="header container container-sm-full">
     <nav class="header-nav d-flex jc-sb ai-c">
       <h1 class="d-flex ai-c">
-        <a class="logo" href="./index.html"
+        <a class="logo" href="index.html"
           ><img src="/Layout_Week4_Main-Mission/assets/logo-white-5423463a.png" alt="Glasses-Logo"
         /></a>
       </h1>
@@ -96,7 +96,7 @@
     <div class="footer-header d-flex jc-sb ai-fs">
       <div>
         <ul class="footer-nav-list d-flex jc-sb g-48">
-          <li><a href="#">首頁</a></li>
+          <li><a href="index.html">首頁</a></li>
           <li><a href="#">系列鏡框</a></li>
           <li><a href="#">門市據點</a></li>
           <li><a href="#">部落格</a></li>
